--- a/.github/workflows/add-performance-comment.yml
+++ b/.github/workflows/add-performance-comment.yml
@@ -6,12 +6,14 @@ on:
 
 jobs:
   add-comment:
+    permissions: write-all
     if: github.event.label.name == 'Performance'
     runs-on: ubuntu-latest
     steps:
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
