--- a/.github/workflows/add-performance-comment.yml
+++ b/.github/workflows/add-performance-comment.yml
@@ -10,6 +10,11 @@ jobs:
     if: github.event.label.name == 'Performance'
     runs-on: ubuntu-latest
     steps:
+      - name: Print env
+        run: |
+          echo ${{ context.issue.number }}
+          echo ${{ context.repo.owner }}
+          echo ${{ context.repo.repo }}
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
