--- a/.github/workflows/add-performance-comment.yml
+++ b/.github/workflows/add-performance-comment.yml
@@ -10,16 +10,14 @@ jobs:
     if: github.event.label.name == 'Performance'
     runs-on: ubuntu-latest
     steps:
-      - name: Print env
-        run: |
-          echo ${{ context.issue.number }}
-          echo ${{ context.repo.owner }}
-          echo ${{ context.repo.repo }}
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            console.log('Issue', context.issue.number)
+            console.log('Owner', context.repo.owner)
+            console.log('Repo', context.repo.repo)
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
