--- a/.github/workflows/add-performance-comment.yml
+++ b/.github/workflows/add-performance-comment.yml
@@ -12,6 +12,8 @@ jobs:
     if: github.event.label.name == 'Performance'
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
