--- a/.github/workflows/benchmark-pull-request.yml
+++ b/.github/workflows/benchmark-pull-request.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 jobs:
   run-performance-benchmark-on-pull-request:
-    if: ${{ (github.event.issue.pull_request) && (contains(github.event.comment.body, '"run-benchmark-test"')) }}
+    if: ${{ (github.event.issue.pull_request) && (contains(github.event.comment.body, '"run-benchmark-test"')) && (length(github.event.comment.body) <= 31) }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
